[package]
name = "bevy_mod_transform2d"
description = "A 2D Transform component for The Bevy game-engine."
version = "0.3.0"
edition = "2021"

repository = "http://github.com/devil-ira/bevy_mod_transform2d"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "gamedev"]
categories = ["game-development"]

[dependencies]
bevy = "0.9"
bevy_rapier2d = { version = "0.18", default-features = false, optional = true }

[dev-dependencies]
bevy_rapier2d = { version = "0.18" }

[patch.crates-io]
bevy_rapier2d = { git = "https://github.com/devil-ira/bevy_rapier", branch = "bevy-0.9" }