[package]
name = "bevy_mod_transform2d"
description = "A 2D Transform component for The Bevy game-engine."
version = "0.4.0"
edition = "2021"

repository = "http://github.com/devil-ira/bevy_mod_transform2d"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "gamedev"]
categories = ["game-development"]

[features]
default = ["bevy_render"]
bevy_render = ["bevy/bevy_render"]

[dependencies]
bevy = { version = "0.10", default-features = false }
bevy_rapier2d = { version = "0.21", default-features = false, optional = true }

[[example]]
name = "rapier2d"
required-features = ["bevy_rapier2d"]

[dev-dependencies]
bevy = "0.10"
bevy_rapier2d = { version = "0.21.0" }
