[package]
name = "bevy_mod_transform2d"
description = "A 2D Transform component for The Bevy game-engine."
version = "0.5.0"
edition = "2021"

repository = "https://github.com/devil-ira/bevy_mod_transform2d"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "gamedev"]
categories = ["game-development"]

[features]
default = ["bevy_render"]
bevy_render = ["bevy/bevy_render"]


[profile.dev]
opt-level = 1


[dependencies]
bevy = { version = "0.11", default-features = false }
bevy_rapier2d = { version = "0.22", default-features = false, optional = true }
bevy_xpbd_2d = { version = "0.2", default-features = false, optional = true }

[dev-dependencies]
bevy = "0.11"
bevy_rapier2d = { version = "0.22" }
bevy_xpbd_2d = { version = "0.2" }

[[example]]
name = "rapier2d"
required-features = ["bevy_rapier2d"]

[[example]]
name = "xpbd_2d"
required-features = ["bevy_xpbd_2d"]

[patch.crates-io]
bevy_xpbd_2d = { git = "https://github.com/Jondolf/bevy_xpbd" }
